# BDE

./: .gitignore  README.md  pyproject.toml
app/: crud.py  csv_io.py  database.py  main.py  models.py  schemas.py
tests/: test_api.py
