[project]
name = "iws-bde"
version = "0.1.0"
description = "BDE System for IWS"
authors = [
    {name = "IWS", email = "info@iws-gmbh.net"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.23.0,<0.28.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "pydantic>=2.6.0,<3.0.0",
    "python-multipart>=0.0.6,<0.0.10"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
    "httpx>=0.26.0,<0.27.0",
    "anyio>=4.0.0,<5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
